--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@jup-ag/terminal": "^4.0.1",
+    "@jup-ag/wallet-adapter": "^0.2.2",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
     "@sentry/react": "^7.106.0",
@@ -18,6 +20,8 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
     "three": "^0.162.0"
   },
   "devDependencies": {
