--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sentry/react": "^7.106.0",
     "@sentry/vite-plugin": "^2.14.3",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.6.3",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
