--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.3",
     "three": "^0.162.0"
   },
   "devDependencies": {
